1-ns/semotop/hosting/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: semotop-service
  labels:
    app: semotop
spec:
  selector:
    app: semotop
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
